--- a/portfolio-backend/src/main/resources/messages.properties
+++ b/portfolio-backend/src/main/resources/messages.properties
@@ -1,11 +1,30 @@
+# Messages d'erreur
 user.not.found=User not found with this email: {0}
-account.already.verified=This account is already verified.
-too.many.requests.code=Too many code requests. Please wait {0} minutes before trying again.
 email.already.used=Email already used.
 invalid.code=Invalid confirmation code.
+account.already.verified=This account is already verified.
+too.many.requests.code=Too many code requests. Please wait {0} minutes before trying again.
 invalid.token=Invalid reset token.
 expired.reset.link=The reset link has expired.
 password.previously.used=This password has already been used.
+account.not.verified=Account not verified. Please verify your email.
+invalid.password=Invalid password.
+authentication.failed=Authentication failed.
+invalid.auth.header=Invalid authorization header.
+self.block=You cannot block yourself.
+user.already.blocked=This user is already blocked.
+user.not.blocked=This user is not blocked.
+
+# Messages de succès (bonus)
+user.registered.success=Registration successful! A verification code has been sent to your email.
+account.verified.success=Account verified successfully!
+code.sent.success=Verification code sent successfully!
+password.reset.sent=Password reset email sent successfully!
+password.reset.success=Password reset successfully!
+user.blocked.success=User {0} blocked successfully.
+user.unblocked.success=User {0} unblocked successfully.
+
+# Messages d'erreur existants non liés à l'authentification (conservés)
 invalid.coordinates=Invalid geographic coordinates.
 missing.coordinates=Latitude/longitude coordinates are missing for this user.
 invalid.birthdate=Birthdate cannot be in the future.
@@ -23,3 +42,164 @@ already.friends=These users are already friends.
 friend.request.sent=A friend request has already been sent to this user.
 friend.request.received=This user has already sent you a friend request. Please accept it.
 no.friend.request=No friend request was sent.
+
+# Messages d'erreur pour UserInteractionService et UserRelationService
+self.report=You cannot report yourself.
+user.already.reported=This user has already been reported by you.
+
+# Messages d'erreur pour CertificationService
+certification.not.found=Certification not found with this ID: {0}
+
+# Messages de succès pour CertificationService
+certification.created.success=Certification created successfully for user {0}
+certification.updated.success=Certification {0} updated successfully
+certification.deleted.success=Certification {0} deleted successfully
+
+# Messages d'erreur pour ContactService
+contact.receiver.not.found=Receiver not found with ID: {0}
+contact.self.email=You cannot contact yourself with this email.
+contact.self.phone=You cannot contact yourself with this phone number.
+contact.self=You cannot contact yourself.
+contact.sender.not.found=Sender not found with ID: {0}
+contact.missing.sender.info=Sender email, phone, and message are required for an unknown sender.
+contact.request.already.exists=A pending contact request already exists between these users.
+contact.request.not.found=Contact request not found with ID: {0}
+contact.developer.not.found=Developer not found with ID: {0}
+
+# Messages de succès pour ContactService (optionnels)
+contact.request.sent.success=Contact request sent successfully to user {0}
+contact.request.accepted.success=Contact request {0} accepted successfully
+
+# Messages d'erreur pour EducationService
+education.not.found=Education not found with this ID: {0}
+
+# Messages de succès pour EducationService (optionnels)
+education.created.success=Education created successfully for user {0}
+education.updated.success=Education {0} updated successfully
+education.deleted.success=Education {0} deleted successfully
+
+# Messages d'erreur pour EmailService
+email.send.failed=Failed to send email to {0}
+
+# Messages de succès pour EmailService (optionnel)
+email.send.success=Email sent successfully to {0}
+
+# Messages d'erreur pour ExperienceService
+experience.not.found=Experience not found with this ID: {0}
+
+# Messages de succès pour ExperienceService (optionnels)
+experience.created.success=Experience created successfully for user {0}
+experience.updated.success=Experience {0} updated successfully
+experience.deleted.success=Experience {0} deleted successfully
+
+# Messages d'erreur pour FriendRequestService
+friend.request.not.found=Friend request not found with ID: {0}
+unauthorized.friend.request.action=You are not authorized to perform this action on this friend request.
+friend.request.not.pending=The friend request is not pending. Current status: {0}
+friend.request.already.processed=The friend request was not found or has already been processed.
+
+# Messages de succès pour FriendRequestService (optionnels)
+friend.request.sent.success=Friend request sent successfully to user {0}
+friend.request.accepted.success=Friend request {0} accepted successfully
+friend.request.rejected.success=Friend request {0} rejected successfully
+friend.request.canceled.success=Friend request {0} canceled successfully
+friend.removed.success=Friend {0} removed successfully
+
+# Messages d'erreur pour GoogleMapsService
+address.not.found=No address found for these coordinates.
+google.maps.address.error=Error retrieving address from Google Maps: {0}
+google.maps.location.error=Error retrieving city and country from Google Maps: {0}
+
+# Messages d'erreur pour ImageService
+image.not.found=Image not found: {0}
+image.upload.failed=Failed to upload image: {0}
+image.retrieval.failed=Failed to retrieve images: {0}
+image.delete.failed=Failed to delete image: {0}
+image.profile.set.failed=Failed to set image as profile picture: {0}
+
+# Messages de succès pour ImageService (optionnels)
+image.upload.success=Image uploaded successfully for user {0}
+image.delete.success=Image {0} deleted successfully
+image.profile.set.success=Image {0} set as profile picture successfully
+
+# Messages d'erreur pour InterestService
+interest.not.found=Interest not found with this ID: {0}
+
+# Messages de succès pour InterestService (optionnels)
+interest.created.success=Interest created successfully for user {0}
+interest.updated.success=Interest {0} updated successfully
+interest.deleted.success=Interest {0} deleted successfully
+
+# Messages d'erreur pour LanguageService
+language.not.found=Language not found with this ID: {0}
+
+# Messages de succès pour LanguageService (optionnels)
+language.created.success=Language created successfully for user {0}
+language.updated.success=Language {0} updated successfully
+language.deleted.success=Language {0} deleted successfully
+
+# Messages d'erreur pour NotificationService
+notification.not.found=Notification not found with this ID: {0}
+
+# Messages de succès pour NotificationService (optionnels)
+notification.marked.read.success=Notification {0} marked as read successfully
+notification.deleted.success=Notification {0} deleted successfully
+notifications.all.deleted.success=All notifications deleted successfully for user {0}
+
+# Messages d'erreur pour PortfolioCardService
+portfolio.not.found=Portfolio not found for user: {0}
+
+# Messages de succès pour PortfolioCardService (optionnel)
+portfolio.cards.updated.success=Portfolio cards updated successfully for user {0}
+
+# Messages de succès pour PortfolioService (optionnel)
+portfolio.updated.success=Portfolio updated successfully for user {0}
+
+# Messages d'erreur pour ProjectService
+project.not.found=Project not found with this ID: {0}
+
+# Messages de succès pour ProjectService (optionnels)
+project.created.success=Project created successfully for user {0}
+project.updated.success=Project {0} updated successfully
+project.deleted.success=Project {0} deleted successfully
+
+# Messages d'erreur pour RecommendationService
+recommendation.not.found=Recommendation not found with this ID: {0}
+
+# Messages de succès pour RecommendationService (optionnels)
+recommendation.created.success=Recommendation created successfully for user {0}
+recommendation.updated.success=Recommendation {0} updated successfully
+recommendation.deleted.success=Recommendation {0} deleted successfully
+
+# Messages d'erreur pour SkillService
+skill.not.found=Skill not found with this ID: {0}
+
+# Messages de succès pour SkillService (optionnels)
+skill.created.success=Skill created successfully for user {0}
+skill.updated.success=Skill {0} updated successfully
+skill.deleted.success=Skill {0} deleted successfully
+
+# Messages d'erreur pour SocialLinkService
+social.link.not.found=Social link not found with this ID: {0}
+
+# Messages de succès pour SocialLinkService (optionnels)
+social.link.created.success=Social link created successfully for user {0}
+social.link.updated.success=Social link {0} updated successfully
+social.link.deleted.success=Social link {0} deleted successfully
+
+# Messages d'erreur pour WeatherService
+weather.data.retrieval.failed=Failed to retrieve weather data
+
+# Messages de succès pour WeatherService (optionnel)
+weather.data.retrieval.success=Weather data retrieved successfully for coordinates {0},{1}
+
+# Messages existants pour reportUser (déjà présents)
+self.report=You cannot report yourself.
+user.already.reported=This user has already been reported by you.
+
+# Messages de succès pour reportUser
+user.reported.success=User {0} reported successfully by {1}
+
+# Messages pour les endpoints admin
+report.not.found=Report not found with ID: {0}
+report.resolved.success=Report {0} resolved successfully
