--- a/portfolio-backend/src/main/resources/messages_fr.properties
+++ b/portfolio-backend/src/main/resources/messages_fr.properties
@@ -1,25 +1,39 @@
+# Messages d'erreur
 user.not.found=Aucun utilisateur trouvé avec cet email : {0}
-account.already.verified=Ce compte est déjà vérifié.
-too.many.requests.code=Trop de demandes de code. Veuillez attendre {0} minutes avant de réessayer.
 email.already.used=Email déjà utilisé.
 invalid.code=Code de confirmation invalide.
+account.already.verified=Ce compte est déjà vérifié.
+too.many.requests.code=Trop de demandes de code. Veuillez attendre {0} minutes avant de réessayer.
 invalid.token=Token de réinitialisation invalide.
 expired.reset.link=Le lien de réinitialisation a expiré.
 password.previously.used=Ce mot de passe a déjà été utilisé.
-invalid.coordinates=Coordonnées géographiques invalides.
-missing.coordinates=Les coordonnées latitude/longitude sont manquantes pour cet utilisateur.
-invalid.birthdate=La date de naissance ne peut pas être dans le futur.
-invalid.sex=Sexe invalide. Les valeurs autorisées sont : 'Man', 'Woman', 'Other' ou vide.
-invalid.user.ids=Les identifiants des utilisateurs ne peuvent pas être nuls ou vides.
-same.user.contact=L'expéditeur et le destinataire ne peuvent pas être la même personne.
-contact.request.exists=Une demande de contact existe déjà entre ces utilisateurs.
-not.friends=Ces utilisateurs ne sont pas amis.
-self.like=Un utilisateur ne peut pas se liker lui-même.
-already.liked=Cet utilisateur a déjà été liké.
-not.liked=Cet utilisateur n'a pas été liké.
-inconsistent.like.data=Les données de like sont incohérentes pour cet utilisateur.
-self.friend.request=Un utilisateur ne peut pas s'envoyer une demande d'ami à lui-même.
-already.friends=Ces utilisateurs sont déjà amis.
-friend.request.sent=Une demande d'ami a déjà été envoyée à cet utilisateur.
-friend.request.received=Cet utilisateur vous a déjà envoyé une demande d'ami. Veuillez l'accepter.
-no.friend.request=Aucune demande d'ami n'a été envoyée.
+account.not.verified=Compte non vérifié. Veuillez vérifier votre email.
+invalid.password=Mot de passe invalide.
+authentication.failed=Échec de l'authentification.
+invalid.auth.header=En-tête d'autorisation invalide.
+
+# Messages de succès
+user.registered.success=Inscription réussie ! Un code de vérification a été envoyé à votre email.
+account.verified.success=Compte vérifié avec succès !
+code.sent.success=Code de vérification envoyé avec succès !
+password.reset.sent=Email de réinitialisation de mot de passe envoyé avec succès !
+password.reset.success=Mot de passe réinitialisé avec succès !
+
+# Messages d'erreur existants non liés à l'authentification (conservés en anglais)
+invalid.coordinates=Invalid geographic coordinates.
+missing.coordinates=Latitude/longitude coordinates are missing for this user.
+invalid.birthdate=Birthdate cannot be in the future.
+invalid.sex=Invalid sex. Allowed values are: 'Man', 'Woman', 'Other' or empty.
+invalid.user.ids=User IDs cannot be null or empty.
+same.user.contact=Sender and receiver cannot be the same person.
+contact.request.exists=A contact request already exists between these users.
+not.friends=These users are not friends.
+self.like=User cannot like themselves.
+already.liked=This user has already been liked.
+not.liked=This user has not been liked.
+inconsistent.like.data=Like data is inconsistent for this user.
+self.friend.request=User cannot send a friend request to themselves.
+already.friends=These users are already friends.
+friend.request.sent=A friend request has already been sent to this user.
+friend.request.received=This user has already sent you a friend request. Please accept it.
+no.friend.request=No friend request was sent.
